[gd_scene load_steps=30 format=1]

[ext_resource path="res://Data/Levels/Base/Base.gd" type="Script" id=1]
[ext_resource path="res://defence_zone.tscn" type="PackedScene" id=2]
[ext_resource path="res://base_zone.gd" type="Script" id=3]
[ext_resource path="res://Data/Buildings/Food.gd" type="Script" id=4]
[ext_resource path="res://Data/Buildings/Barracks.png" type="Texture" id=5]
[ext_resource path="res://Data/Buildings/Tall_Steel_wall.gd" type="Script" id=6]
[ext_resource path="res://Data/Buildings/Tall_Steel_Gate.png" type="Texture" id=7]
[ext_resource path="res://Data/Buildings/sandbag_nest.gd" type="Script" id=8]
[ext_resource path="res://Data/Buildings/mounted_gun.gd" type="Script" id=9]
[ext_resource path="res://Data/Buildings/nest_pig.gd" type="Script" id=10]
[ext_resource path="res://Data/Weapons/Gun Parts/Barrel/basic_barrel.png" type="Texture" id=11]
[ext_resource path="res://Data/Weapons/Gun Parts/Melee/bayanette.png" type="Texture" id=12]
[ext_resource path="res://Data/Weapons/Gun Parts/Clip/small clip.png" type="Texture" id=13]
[ext_resource path="res://Data/Weapons/Gun Parts/Special_attatchments/grenade_launcher.png" type="Texture" id=14]
[ext_resource path="res://Data/Weapons/Gun Parts/lazer sight.png" type="Texture" id=15]
[ext_resource path="res://Data/Buildings/mounted_pig.png" type="Texture" id=16]
[ext_resource path="res://Data/Weapons/basic_gun_shoot.tres" type="Animation" id=17]
[ext_resource path="res://Data/Buildings/Sand_bags_small.png" type="Texture" id=18]
[ext_resource path="res://Data/Buildings/Sand_bags.png" type="Texture" id=19]
[ext_resource path="res://Data/Tiles/SpaceTiles/space background.jpg" type="Texture" id=20]
[ext_resource path="res://Data/Tiles/dirt.xml" type="TileSet" id=21]
[ext_resource path="res://Data/Levels/Base/war_table.gd" type="Script" id=22]
[ext_resource path="res://Data/Buildings/War_Table.png" type="Texture" id=23]
[ext_resource path="res://Faction.tscn" type="PackedScene" id=24]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 20 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 20 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 8 )

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 30.0
height = 168.0

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 20, 7 )

[node name="Base" type="Node2D" groups=[
"inanimate",
]]

script/script = ExtResource( 1 )

[node name="dzones" type="Node2D" parent="."]

editor/display_folded = true

[node name="defence_zone" parent="dzones" instance=ExtResource( 2 )]

transform/pos = Vector2( 10, 0 )
script/script = ExtResource( 3 )

[node name="buildings" type="Node2D" parent="dzones/defence_zone"]

[node name="Food" type="Node2D" parent="dzones/defence_zone/buildings"]

editor/display_folded = true
transform/pos = Vector2( -20, 0 )
z/z = -100
script/script = ExtResource( 4 )

[node name="body 1" type="Sprite" parent="dzones/defence_zone/buildings/Food"]

transform/pos = Vector2( 30, -20 )
texture = ExtResource( 5 )

[node name="body" type="KinematicBody2D" parent="dzones/defence_zone/buildings/Food"]

editor/display_folded = true
transform/pos = Vector2( 30, -20 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="dzones/defence_zone/buildings/Food/body"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="dzones/defence_zone/buildings/Food/body"]

transform/pos = Vector2( -10, 20 )

[node name="tall_steel_wall" type="Node2D" parent="dzones/defence_zone/buildings"]

editor/display_folded = true
transform/pos = Vector2( 240, 0 )
z/z = 100
script/script = ExtResource( 6 )

[node name="body 1" type="Sprite" parent="dzones/defence_zone/buildings/tall_steel_wall"]

transform/pos = Vector2( -8, -40 )
texture = ExtResource( 7 )
centered = false

[node name="body" type="KinematicBody2D" parent="dzones/defence_zone/buildings/tall_steel_wall"]

editor/display_folded = true
transform/pos = Vector2( 0, -20 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="dzones/defence_zone/buildings/tall_steel_wall/body"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="sandbag_bunker" type="Node2D" parent="dzones/defence_zone/buildings"]

editor/display_folded = true
transform/pos = Vector2( 180, 0 )
z/z = 100
script/script = ExtResource( 8 )

[node name="body" type="KinematicBody2D" parent="dzones/defence_zone/buildings/sandbag_bunker"]

editor/display_folded = true
transform/pos = Vector2( 20, -10 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 16, 2 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -20, 2 )
shapes/1/trigger = false
collision/layers = 0
collision/mask = 0
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body"]

transform/pos = Vector2( 16, 2 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D1" type="CollisionShape2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body"]

transform/pos = Vector2( -20, 2 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 1

[node name="defence_pos" type="Position2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body"]

transform/pos = Vector2( 0, 10 )

[node name="machinegun_turret" type="Node2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body" groups=[
"deployables",
]]

z/z = 1
script/script = ExtResource( 9 )

[node name="body" type="Node2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

[node name="Pig" type="KinematicBody2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body" groups=[
"guns and parts",
"weapons",
]]

transform/pos = Vector2( 21, -7 )
input/pickable = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 10 )

[node name="body" type="Node2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig"]

editor/display_folded = true
transform/pos = Vector2( 0, 1 )

[node name="barrel" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 19, 1 )
z/z = -1
texture = ExtResource( 11 )
centered = false

[node name="mod" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 8, 1 )
z/z = -1
centered = false

[node name="melee" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 14, 4 )
texture = ExtResource( 12 )
centered = false

[node name="clip" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 9, 5 )
texture = ExtResource( 13 )
centered = false

[node name="special" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

visibility/visible = false
transform/pos = Vector2( 11, 2 )
transform/rot = 180.0
texture = ExtResource( 14 )
centered = false

[node name="RayCast2D" type="RayCast2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

editor/display_folded = true
transform/pos = Vector2( 19, -4 )
enabled = true
cast_to = Vector2( 1, 0 )
layer_mask = 1
type_mask = 15

[node name="lazer_sight" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body/RayCast2D"]

visibility/opacity = 0.2
texture = ExtResource( 15 )
centered = false

[node name="barrel_tip" type="Position2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

transform/pos = Vector2( 19, -4 )

[node name="Sprite" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/body"]

texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Shoot = ExtResource( 17 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area2D" type="Area2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig"]

transform/pos = Vector2( 0, 1 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 134, -3 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig/Area2D"]

transform/pos = Vector2( 134, -3 )
transform/rot = 90.0
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="gun_handle" type="Position2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret/body/Pig"]

[node name="RayCast2D" type="RayCast2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Timer" type="Timer" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Attack" type="Timer" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="turret_pos" type="Position2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

transform/pos = Vector2( 16, -8 )

[node name="operator_pos" type="Position2D" parent="dzones/defence_zone/buildings/sandbag_bunker/body/machinegun_turret"]

transform/pos = Vector2( -3, 8 )

[node name="body 2" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker"]

transform/pos = Vector2( 8, -8 )
texture = ExtResource( 18 )
centered = false

[node name="body 1" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker"]

transform/pos = Vector2( 26, -16 )
texture = ExtResource( 19 )
centered = false

[node name="body 3" type="Sprite" parent="dzones/defence_zone/buildings/sandbag_bunker"]

transform/pos = Vector2( -10, -16 )
texture = ExtResource( 19 )
centered = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 0 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 0.1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 1020, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/scale = Vector2( 0.532292, 0.587891 )
texture = ExtResource( 20 )
centered = false

[node name="TileMap" type="TileMap" parent="." groups=[
"inanimate",
]]

mode = 0
tile_set = ExtResource( 21 )
cell/size = Vector2( 20, 20 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 524289
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray( -262163, 1, -196627, 1, -262043, 1, -131091, 1, -196507, 1, -65555, 1, -130971, 1, -19, 1, -65435, 1, 65517, 1, 65518, 1, 65519, 1, 65520, 1, 65521, 1, 65522, 1, 65523, 1, 65524, 1, 65525, 1, 65526, 1, 65527, 1, 65528, 1, 65529, 1, 65530, 1, 65531, 1, 65532, 1, 65533, 1, 65534, 1, 65535, 1, 0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1, 9, 1, 10, 1, 11, 1, 12, 1, 13, 1, 14, 1, 15, 1, 16, 1, 17, 1, 18, 1, 19, 1, 20, 1, 21, 1, 22, 1, 23, 1, 24, 1, 25, 1, 26, 1, 27, 1, 28, 1, 29, 1, 30, 1, 31, 1, 32, 1, 33, 1, 34, 1, 35, 1, 36, 1, 37, 1, 38, 1, 39, 1, 40, 1, 41, 1, 42, 1, 43, 1, 44, 1, 45, 1, 46, 1, 47, 1, 48, 1, 49, 1, 50, 1, 51, 1, 52, 1, 53, 1, 54, 1, 55, 1, 56, 1, 57, 1, 58, 1, 59, 1, 60, 1, 61, 1, 62, 1, 63, 1, 64, 1, 65, 1, 66, 1, 67, 1, 68, 1, 69, 1, 70, 1, 71, 1, 72, 1, 73, 1, 74, 1, 75, 1, 76, 1, 77, 1, 78, 1, 79, 1, 80, 1, 81, 1, 82, 1, 83, 1, 84, 1, 85, 1, 86, 1, 87, 1, 88, 1, 89, 1, 90, 1, 91, 1, 92, 1, 93, 1, 94, 1, 95, 1, 96, 1, 97, 1, 98, 1, 99, 1, 100, 1, 101, 1 )

[node name="war_table" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -77, -6 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 1024
script/script = ExtResource( 22 )

[node name="Label" type="Label" parent="war_table"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -23.0
margin/top = -27.0
margin/right = 27.0
margin/bottom = -13.0
text = "Interact"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="war_table"]

transform/pos = Vector2( 0, -1 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="war_table"]

texture = ExtResource( 23 )

[node name="player_pos" type="Position2D" parent="."]

transform/pos = Vector2( 41, 0 )

[node name="start_pos" type="Position2D" parent="."]

transform/pos = Vector2( 20, 0 )

[node name="Faction" parent="." instance=ExtResource( 24 )]

[node name="enemy_start" type="Position2D" parent="."]

transform/pos = Vector2( 620, -70 )


